--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,13 +7,14 @@
 
 <p>
   <strong>Title:</strong>
-  <%= @post.title %>
+  <%= @post.title %> posted by <%= @post.user.email %>
 </p>
 
 <p>
   <strong>Content:</strong>
   <%= @post.content %>
 </p>
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
+<% if @post.user == current_user %>
+  <%= link_to 'Edit', edit_post_path(@post) %> |
+<% end %>
 <%= link_to 'Back', posts_path %>
